2000-10-25  Dirk Meyer <dischi@tzi.de>

	* gnus-demon.el (gnus-demon-time-to-step): theHour was set to
	seconds instead of hour.

2000-10-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* mail-source.el (mail-sources): Better `:type'.

2000-10-24 18:31:29  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-request-article-this-buffer):
	gnus-refer-article-method might be a single method.
	* gnus-sum.el (gnus-refer-article-methods): The second could be 
	a named method.

2000-10-23  Simon Josefsson  <simon@josefsson.org>

	* flow-fill.el (fill-flowed): Don't flow "-- " lines.
	(fill-flowed): Make "quote-depth wins" rule work when first line
	is at level 0.

2000-10-21 11:23:21  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-util.el (mm-multibyte-p): Test (featurep 'xemacs).

2000-10-21 10:54:57  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-article-mime-total-parts): New function.
	(gnus-mm-display-part): Use it.
	(gnus-mime-display-single): Ditto.
	(gnus-mime-display-alternative): Ditto.

2000-10-21 09:38:27  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mailcap.el (mailcap-parse-mailcaps): Don't use parse-colon-path,
	because they are files, not directories.
	(mailcap-parse-mimetypes): Ditto.

2000-10-20 19:55:59  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-mime-inline-part): Check validity of charset.

2000-10-18  Dave Love  <fx@gnu.org>

	* mail-source.el (mm-util): Require.
	(defvar): Use rmail-spool-directory unconditionally.

	* gnus-nocem.el (gnus-nocem-issuers): Update.
	(gnus-nocem-check-from): New option.
	(gnus-nocem-scan-groups): Use it.
	(gnus-nocem-check-article): Bind gnus-newsgroup-name.

2000-10-18  Miles Bader  <miles@lsi.nec.co.jp>

	* gnus-nocem.el (gnus-nocem-check-article-limit): New variable.
	(gnus-nocem-scan-groups): Obey `gnus-nocem-check-article-limit'.

2000-10-18  Simon Josefsson  <simon@josefsson.org>

	* nnheader.el (nnheader-parse-head): Try both "from:" and "from: ".
